5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4375/executions/1771_1183.log
== TEST (2019-05-23 19:15:11) 
-- CODE:
from numpy import*
v=array(eval(input("digite os vetores: ")))
v1=(v,dtype=int)
print(v1)

-- ERROR:
File "XXXX", line 3
    v1=(v,dtype=int)
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:13:56) 
-- CODE:
from numpy import*
v=array(eval(input("digite os vetores: ")))
i=0
id2=0
vv=0
while(i<size(v)):
	if(v[i]>=0):
		v=v+1
id2=0
id3=0
z=zeros(vv,dtype=int)
while(id3<vv):
	if(v[id2]>=0):
		z[id3]=v[id2]
		id2=id2+1
		id3=id3+1
	else:
		id2=id2+1
		id3=id3+0
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:16:46) 
-- CODE:
from numpy import*
v=array(eval(input("digite os vetores: ")))
i=0
id2=0
vv=0
while(i<size(v)):
	if(v[i]>=0):
		vv=vv+1
	else:
		vv=vv+0
	i=i+1
id2=0
id3=0
z=zeros(vv,dtype=int)
while(id3<vv):
	if(v[id2]>=0):
		z[id3]=v[id2]
		id2=id2+1
		id3=id3+1
	else:
		id2=id2+1
		id3=id3+0
print(z)

-- EXECUTION TIME:
2.61523
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
digite os vetores: [18 32 14 25]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:16:50) 
-- CODE:
from numpy import*
v=array(eval(input("digite os vetores: ")))
i=0
id2=0
vv=0
while(i<size(v)):
	if(v[i]>=0):
		vv=vv+1
	else:
		vv=vv+0
	i=i+1
id2=0
id3=0
z=zeros(vv,dtype=int)
while(id3<vv):
	if(v[id2]>=0):
		z[id3]=v[id2]
		id2=id2+1
		id3=id3+1
	else:
		id2=id2+1
		id3=id3+0
print(z)

-- EXECUTION TIME:
2.44495
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
digite os vetores: [2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
digite os vetores: [18 32 14 25]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:17:37) 
-- CODE:
from numpy import*
v=array(eval(input("digite os vetores: ")))
i=0
id2=0
vv=0
while(i<size(v)):
	if(v[i]>=0):
		vv=vv+1
	else:
		vv=vv+0
	i=i+1
id2=0
id3=0
z=zeros(vv, dtype=int)
while(id3<vv):
	if(v[id2]>=0):
		z[id3]=v[id2]
		id2=id2+1
		id3=id3+1
	else:
		id2=id2+1
		id3=id3+0
print(z)

-- EXECUTION TIME:
2.81112
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
digite os vetores: [18 32 14 25]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:17:40) 
-- CODE:
from numpy import*
v=array(eval(input("digite os vetores: ")))
i=0
id2=0
vv=0
while(i<size(v)):
	if(v[i]>=0):
		vv=vv+1
	else:
		vv=vv+0
	i=i+1
id2=0
id3=0
z=zeros(vv, dtype=int)
while(id3<vv):
	if(v[id2]>=0):
		z[id3]=v[id2]
		id2=id2+1
		id3=id3+1
	else:
		id2=id2+1
		id3=id3+0
print(z)

-- EXECUTION TIME:
2.9663
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
digite os vetores: [18 32 14 25]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:18:49) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite os vetores: ")))
i=0
i2=0
v=0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v=v+1
	else:
		v=v+0
	i=i+1
i2=0
i3=0
z=zeros(v, dtype=int)
while(i3<v):
	if(v[i2]>=0):
		z[i3]=vetor[i2]
		i2=i2+1
		i3=i3+1
	else:
		i2=i2+1
		i3=i3+0
print(z)

-- EXECUTION TIME:
3.50363
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1183/main.py", line 16, in <module>
    if(v[i2]>=0):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:18:50) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite os vetores: ")))
i=0
i2=0
v=0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v=v+1
	else:
		v=v+0
	i=i+1
i2=0
i3=0
z=zeros(v, dtype=int)
while(i3<v):
	if(v[i2]>=0):
		z[i3]=vetor[i2]
		i2=i2+1
		i3=i3+1
	else:
		i2=i2+1
		i3=i3+0
print(z)

-- EXECUTION TIME:
3.01035
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1183/main.py", line 16, in <module>
    if(v[i2]>=0):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:18:54) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite os vetores: ")))
i=0
i2=0
v=0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v=v+1
	else:
		v=v+0
	i=i+1
i2=0
i3=0
z=zeros(v, dtype=int)
while(i3<v):
	if(v[i2]>=0):
		z[i3]=vetor[i2]
		i2=i2+1
		i3=i3+1
	else:
		i2=i2+1
		i3=i3+0
print(z)

-- EXECUTION TIME:
4.85713
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1771/1183/main.py", line 16, in <module>
    if(v[i2]>=0):
TypeError: 'int' object is not subscriptable

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:19:12) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite os vetores: ")))
i=0
i2=0
v=0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v=v+1
	else:
		v=v+0
	i=i+1
i2=0
i3=0
z=zeros(v, dtype=int)
while(i3<v):
	if(vetor[i2]>=0):
		z[i3]=vetor[i2]
		i2=i2 + 1
		i3=i3 + 1
	else:
		i2=i2 + 1
		i3=i3 + 0
print(z)

-- EXECUTION TIME:
2.3469
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:19:44) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite os vetores: ")))
i=0
i2=0
v=0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v=v+1
	else:
		v=v+0
	i=i+1
i2=0
i3=0
z=zeros(v, dtype=int)
while(i3<v):
	if(vetor[i2]>=0):
		z[i3]=vetor[i2]
		i2=i2 + 1
		i3=i3 + 1
	else:
		i2=i2 + 1
		i3=i3 + 0
print(z)

-- EXECUTION TIME:
1.82518
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:31:06) 
-- CODE:
from numpy import*
v=array(eval(input("digite os vetores: ")))
i=0
id2=0
vv=0
while(i<size(v)):
	if(v[i]>=0):
		v=v+1
id2=0
id3=0
z=zeros(vv,dtype=int)
while(id3<vv):
	if(v[id2]>=0):
		z[id3]=v[id2]
		id2=id2+1
		id3=id3+1
	else:
		id2=id2+1
		id3=id3+0
print(z)

-- EXECUTION TIME:
1048.36
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:55) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite os vetores: ")))
i=0
i2=0
v=0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v=v+1
	else:
		v=v+0
	i=i+1
i2=0
i3=0
z=zeros(v, dtype=int)
while(i3<v):
	if(vetor[i2]>=0):
		z[i3]=vetor[i2]
		i2=i2 + 1
		i3=i3 + 1
	else:
		i2=i2 + 1
		i3=i3 + 0
print(z)

-- EXECUTION TIME:
2.07179
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[1]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:32:57) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite os vetores: ")))
i=0
i2=0
v=0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v=v+1
	else:
		v=v+0
	i=i+1
i2=0
i3=0
z=zeros(v, dtype=int)
while(i3<v):
	if(vetor[i2]>=0):
		z[i3]=vetor[i2]
		i2=i2 + 1
		i3=i3 + 1
	else:
		i2=i2 + 1
		i3=i3 + 0
print(z)

-- EXECUTION TIME:
1.85707
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 11:32:58) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite os vetores: ")))
i=0
i2=0
v=0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v=v+1
	else:
		v=v+0
	i=i+1
i2=0
i3=0
z=zeros(v, dtype=int)
while(i3<v):
	if(vetor[i2]>=0):
		z[i3]=vetor[i2]
		i2=i2 + 1
		i3=i3 + 1
	else:
		i2=i2 + 1
		i3=i3 + 0
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:34:03) 
-- CODE:
from numpy import*
v=array(eval(input("digite os vetores: ")))
i=0
id2=0
vv=0
while(i<size(v)):
	if(v[i]>=0):
		vv=vv+1
id2=0
id3=0
z=zeros(vv,dtype=int)
while(id3<vv):
	if(v[id2]>=0):
		z[id3]=v[id2]
		id2=id2+1
		id3=id3+1
	else:
		id2=id2+1
		id3=id3+0
print(z)

-- EXECUTION TIME:
1118.54
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 11:35:02) 
-- CODE:
from numpy import*
v=array(eval(input("digite os vetores: ")))
i=0
id2=0
vv=0
while(i<size(v)):
	if(v[i]>=0):
		vv=vv+1
	else:
		vv=vv+0
		i=i+1
id2=0
id3=0
z=zeros(vv,dtype=int)
while(id3<vv):
	if(v[id2]>=0):
		z[id3]=v[id2]
		id2=id2+1
		id3=id3+1
	else:
		id2=id2+1
		id3=id3+0
print(z)

-- EXECUTION TIME:
1129.31
-- ERROR:
Killed

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-30 15:46:34) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite os vetores: ")))
i=0
i2=0
v=0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v=v+1
	else:
		v=v+0
	i=i+1
i2=0
i3=0
z=zeros(v, dtype=int)
while(i3<v):
	if(vetor[i2]>=0):
		z[i3]=vetor[i2]
		i2=i2 + 1
		i3=i3 + 1
	else:
		i2=i2 + 1
		i3=i3 + 0
print(z)

-- EXECUTION TIME:
0.341471
-- TEST CASE 1:
---- input:
[-1,-2,-3,-4,-5,-6,-7,-8,-9,-10,1]
---- correct output:
[1]
---- user output:
[1]
-- TEST CASE 2:
---- input:
[2,-1,3,-4,5]
---- correct output:
[2 3 5]
---- user output:
[2 3 5]
-- TEST CASE 3:
---- input:
[-1,18,32,14,25,-6]
---- correct output:
[18 32 14 25]
---- user output:
[18 32 14 25]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-30 15:55:15) 
-- CODE:
from numpy import*
vetor=array(eval(input("digite os vetores: ")))
i=0
i2=0
v=0
while(i<size(vetor)):
	if(vetor[i]>=0):
		v=v+1
	else:
		v=v+0
	i=i+1
i2=0
i3=0
z=zeros(v, dtype=int)
while(i3<v):
	if(vetor[i2]>=0):
		z[i3]=vetor[i2]
		i2=i2 + 1
		i3=i3 + 1
	else:
		i2=i2 + 1
		i3=i3 + 0
print(z)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
